--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 	<head>
 		<title>Ajinkya Wavare</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Ajinkya Wavare, BTECH(Information Technology), VJTI" />
+		<meta name="keywords" content="Ajinkya, Wavare, BTech, VJTI,Mumbai." />
+		<meta name="author" content="Ajinkya Wavare">
+		<meta name="robots" content="index, follow">
+		<meta name="revisit-after" content="3 days">
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.scrolly.min.js"></script>
