--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
+		<link rel="shortcut icon" href="http://faviconist.com/icons/bdacedaf57c555e1faccce1d675eb9d3/favicon.ico" />
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
